[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD/Menu/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://HUD/Menu/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "enter"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -96, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "exit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -96, 0 ) ]
}

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 256, 152 )
scale = Vector2( 4.375, 2.8125 )
texture = ExtResource( 4 )

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( -96, 0 )

[node name="PlayButton" parent="Buttons" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 152.0
margin_right = 80.0
margin_bottom = 184.0
text = "Play"

[node name="StatsButton" parent="Buttons" instance=ExtResource( 1 )]
modulate = Color( 0.419608, 0.419608, 0.419608, 1 )
margin_left = 16.0
margin_top = 200.0
margin_right = 80.0
margin_bottom = 232.0
disabled = true
text = "Stats"

[node name="QuitGameButton" parent="Buttons" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 248.0
margin_right = 80.0
margin_bottom = 280.0
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 1 )
anims/exit = SubResource( 2 )

[node name="Cursor" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
